--- a/sioux_mach_learn_project.Rmd
+++ b/sioux_mach_learn_project.Rmd
@@ -1,13 +1,13 @@
 ---
 output:
+  bookdown::html_document2:
+    pandoc_args:
+    - --csl
+    - references/apa.csl
   bookdown::pdf_document2:
     includes:
       in_header: latex/preamble.tex
       before_body: latex/titlepage.tex
-    pandoc_args:
-    - --csl
-    - references/apa.csl
-  bookdown::html_document2:
     pandoc_args:
     - --csl
     - references/apa.csl
@@ -518,12 +518,12 @@ test_truth <- stroke_data_nn%>%
   pull(stroke)
 ```
 
-```{r}
+```{r include=FALSE}
 # train the nural networtk with the variables (hypertension, heart disease and avg. glucose level)
 
 library(neuralnet)
 
-stroke_data_net <- neuralnet(stroke ~ hypertension + heart_disease + avg_glucose_level , train, hidden = c(4,3),stepmax=1e+04, linear.output = T)
+stroke_data_net <- neuralnet(stroke ~ hypertension + heart_disease + avg_glucose_level , train, hidden = c(4,3),stepmax=1e+06, linear.output = T)
 
 # plot the neural network itself to see how it look (in this case not plotted, takes quiet a while to compute)
 
@@ -531,7 +531,7 @@ stroke_data_net <- neuralnet(stroke ~ hypertension + heart_disease + avg_glucose
 ```
 
 
-```{r}
+```{r include=FALSE}
 # lets make the first predictions
 test_results <- neuralnet::compute(stroke_data_net,test_in)
 test_results$net.result
